--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 adversarial_robustness_toolbox==1.10.1
-art==5.6
 numpy==1.21.3
 pandas==1.3.5
 torch==1.10.0
 torchvision==0.11.1
 tqdm==4.62.3
+tensorflow==2.7.0
