--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-adversarial_robustness_toolbox==1.10.1
+advertorch==0.2.3
+cleverhans==4.0.0
+matplotlib==3.4.3
 numpy==1.21.3
 pandas==1.3.5
+scipy==1.7.1
+seaborn==0.11.2
+setuptools==58.0.4
+streamlit==1.10.0
 torch==1.10.0
+torchmetrics==0.8.2
 torchvision==0.11.1
 tqdm==4.62.3
-tensorflow==2.7.0
-cleverhans~=4.0.0
